src/examples/should_fail/lowercase_terminal.kiki
start Epsilon

struct Epsilon

terminal Token {
    $num_lit: isize
}
